deploy/kubernetes/05-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: umgapi-app
  namespace: default
  labels:
    app: umgapi-app
spec:
  type: ClusterIP
  selector:
    app: umgapi-app
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
